--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -317,8 +317,8 @@
 
     <!-- Campo Username -->
     <div class="form-group">
-      <input type="text" id="username" name="username" class="form-input" placeholder="Nome de usuário ou email" required
-        autocomplete="username">
+      <input type="text" id="username" name="username" class="form-input" placeholder="Nome de usuário ou email"
+        required autocomplete="username">
       <i class="fas fa-user input-icon"></i>
     </div>
 
@@ -329,14 +329,14 @@
       <i class="fas fa-lock input-icon"></i>
     </div>
 
-    <!-- Opções do formulário -->
+    <!-- 
     <div class="form-options">
       <div class="checkbox-wrapper">
         <input type="checkbox" id="remember" name="remember">
         <label for="remember">Lembrar-me</label>
       </div>
       <a href="#" class="forgot-link">Esqueceu a senha?</a>
-    </div>
+    </div> -->
 
     <!-- Botão de Login -->
     <button type="submit" class="login-btn">
@@ -344,10 +344,10 @@
     </button>
   </form>
 
-  <!-- Link de Cadastro -->
+  <!-- Link de Cadastro 
   <div class="signup-link">
     Novo aqui? <a href="#">Criar uma Conta</a>
-  </div>
+  </div> -->
 </div>
 
 <script>
